# optics-exercises

./: .gitignore  README.md  flake.nix  optics-exercises.cabal
src/: Laws.hs  Limitations.hs  SelfCorrectingLenses.hs  VirtualFields.hs
test/: LawsSpec.hs  LensLaws.hs  LensProps.hs  LimitationsSpec.hs  SelfCorrectingLensesSpec.hs  VirtualFieldsSpec.hs
