cabal-version:      3.0
name:               optics-exercises
version:            0.1.0.0
synopsis:           Exercise from “Optics by Example”

-- A longer description of the package.
-- description:
homepage:           https://github.com/thomasbach-dev/optics-exercises

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Thomas Bach
maintainer:         info@thomasbach.dev

category:             Data
extra-source-files:
    README.md

common common-options
  build-depends:      base
                    , aeson
                    , containers
                    , lens
                    , lens-aeson
                    , mtl
                    , text
  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                    , OverloadedStrings
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TypeApplications
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

library
  import:             common-options
  exposed-modules:    Laws
                    , Limitations
                    , VirtualFields
  hs-source-dirs:     src

test-suite tests
  import:             common-options                
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  build-depends:      QuickCheck
                    , optics-exercises
                    , genvalidity-hspec
                    , genvalidity-property
                    , genvalidity-text
                    , hspec
                    , validity
                    , validity-text
  hs-source-dirs:     test
  ghc-options:        -Wno-missing-home-modules
                      -Wno-orphans
